Move assignment data into Kernel contracts
Relocate RefillTarget and TaskRuleBinding into the Kernel assignment package and replace executable Matching views with bounded named operations for binding loads, normalization, refill hints, refill, and candidate consumption. Update Pacer, Server, Matching, tests, proof selection, build configuration, and architecture documentation to preserve ownership and validation boundaries.